--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
 <link rel="stylesheet" href="jemdoc.css" type="text/css" />
 <link rel="shortcut icon" href="favicon.ico" />
 <link rel="bookmark" href="favicon.ico" type="image/x-icon"　/>
-<title>Shen, Wenying(沈文颖)</title>
+<title>Shen, Wenying (沈文颖) </title>
 </head>
 <body>
 <table summary="Table for page layout." id="tlayout">
@@ -22,17 +22,18 @@
 </td>
 <td id="layout-content">
 <div id="toptitle">
-<h1>Zhou, Xiuze (周秀泽) </h1>
+<h1>Shen, Wenying (沈文颖) </h1>
 </div>
 <table class="imgtable"><tr><td>
-<a href="https://xiuzezhou.github.io/"><img src="photos/bio.jpg" alt="alt text" width="131px" height="160px" /></a>&nbsp;</td>
-<td align="left"><p><b>Research Scientist, </b> <br />
-AI Research Institute, Hithink RoyalFlush Information Network Co., Ltd. <br />
-Hangzhou, China <br /> 
-<b>Researcher, </b> <br />
-School of Smart Education, Jiangsu Normal University <br />
-Xuzhou, China<br />
-E-mail: <a href="mailto:zhouxiuze@foxmail.com">zhouxiuze@foxmail.com</a></p>
+<a href="https://wshen01.github.io/"><img src="photos/bio.jpg" alt="alt text" width="131px" height="160px" /></a>&nbsp;</td>
+<td align="left"><p><b>Research Assistant, </b> <br />
+Research Department, Asian Development Bank Institute <br />
+Project: Diary Study of Digital Financial Inclusion of Low-Income Households <br />
+Minamiuonuma（Remote）, Japan <br /> 
+<b>Data Analyst (Part-time Job), </b> <br />
+Tak Shing Hong INC<br />
+Williamsburg(Remote), United States<br />
+E-mail: <a href="mailto:wenying@iuj.ac.jp">wenying@iuj.ac.jp</a></p>
 </td></tr></table>
 <h2>About me</h2>
 <p>I received the B.S. degree from the Zhejiang University of Science and Technology, in 2012, and the M.S. degree from Xiamen University, in 2016.<br />
