--- a/index.html
+++ b/index.html
@@ -28,11 +28,10 @@
 <a href="https://wshen01.github.io/"><img src="photos/bio.jpg" alt="alt text" width="131px" height="160px" /></a>&nbsp;</td>
 <td align="left"><p><b>Research Assistant, </b> <br />
 Research Department, Asian Development Bank Institute <br />
-Project: Diary Study of Digital Financial Inclusion of Low-Income Households <br />
 Minamiuonuma（Remote）, Japan <br /> 
-<b>Data Analyst (Part-time Job), </b> <br />
-Tak Shing Hong INC<br />
-Williamsburg(Remote), United States<br />
+<b>Regional Directorate on AML & anti-Terrorism Financing, </b> <br />
+Internal Control and Compliance Department, Huaxia Bank Co., Ltd.<br />
+Hangzhou & Beijing, China<br />
 E-mail: <a href="mailto:wenying@iuj.ac.jp">wenying@iuj.ac.jp</a></p>
 </td></tr></table>
 <h2>About me</h2>
