--- a/index.html
+++ b/index.html
@@ -35,9 +35,11 @@ Hangzhou & Beijing, China<br />
 E-mail: <a href="mailto:wenying@iuj.ac.jp">wenying@iuj.ac.jp</a></p>
 </td></tr></table>
 <h2>About me</h2>
-<p>I received the B.S. degree from the Zhejiang University of Science and Technology, in 2012, and the M.S. degree from Xiamen University, in 2016.<br />
-I am currently a research scientist with the AI Research Institute, Hithink RoyalFlush, China, and a researcher with the School of Smart Education, Jiangsu Normal University, China.<br />
-I focus on using AI to solve practical problems. My main research interests include <b>Large Language Model of NLP</b> and <b>Recommendation Systems</b>. Also, I do some research of <b>CV</b>, such as medical image. </p>
+<p>I will obtain my third master’s degree at the International University of Japan, following the first one at the Finance Department at ZUFE in China and the second one at the Math Department in College of William and Mary in the U.S.
+I am currently an intern at Asian Development Bank Institute in Japan, working on Diary Study of Digital Financial Inclusion of Low-Income Households with the purpose of Addressing Remaining Poverty and Reducing Inequalities.
+I used to serve as a regional director at Huaxia Bank in charge of Anti Money Laundering & Countering Terrorism Financing. 
+Being skilled at statistical techniques and data visualization, I focus on international comparison of economic crisis, particularly undergoing economic downturn and pent-up political tension in China as well as their influence on the world. 
+My dream positions include <b>Data Analyst</b> and <b>Researcher</b> in a think tank, consulting firm or international organization. Also, I do some research of <b>CV</b>, such as medical image. </p>
 <h2>Research</h2>
 <p>My research interests include: </p>
 <ul>
