--- a/index.html
+++ b/index.html
@@ -35,17 +35,17 @@ Hangzhou & Beijing, China<br />
 E-mail: <a href="mailto:wenying@iuj.ac.jp">wenying@iuj.ac.jp</a></p>
 </td></tr></table>
 <h2>About me</h2>
-<p>I will obtain my third master’s degree at the International University of Japan, following the first one at the Finance Department at ZUFE in China and the second one at the Math Department in College of William and Mary in the U.S.
-I am currently an intern at Asian Development Bank Institute in Japan, working on Diary Study of Digital Financial Inclusion of Low-Income Households with the purpose of Addressing Remaining Poverty and Reducing Inequalities.
-I used to serve as a regional director at Huaxia Bank in charge of Anti Money Laundering & Countering Terrorism Financing. 
-Being skilled at statistical techniques and data visualization, I focus on international comparison of economic crisis, particularly undergoing economic downturn and pent-up political tension in China as well as their influence on the world. 
+<p>I will obtain my third master’s degree at the International University of Japan, following the first one at the Finance Department at ZUFE in China and the second one at the Math Department in College of William and Mary in the U.S. <br />
+I am currently a research intern at Asian Development Bank Institute in Japan. <br />
+I used to serve as a regional director at Huaxia Bank in charge of Anti Money Laundering & Countering Terrorism Financing. <br />
+Being skilled at statistical techniques and data visualization, I focus on international comparison of economic crisis, particularly undergoing economic downturn and pent-up political tension in China as well as their influence on the world. <br />
 My dream positions include <b>Data Analyst</b> and <b>Researcher</b> in a think tank, consulting firm or international organization. Also, I do some research of <b>CV</b>, such as medical image. </p>
 <h2>Research</h2>
 <p>My research interests include: </p>
 <ul>
-<li><p>Recommender Systems</p>
+<li><p>Data Visualization in R Programming</p>
 </li>
-<li><p>Large Language Model of NLP</p>
+<li><p>Casual Relationship betwwen Economic Indicators</p>
 </li>
 </ul>
 <h3>Current work</h3>
