--- a/index.html
+++ b/index.html
@@ -50,7 +50,7 @@ My dream positions include <b>Data Analyst</b> and <b>Researcher</b> in a think 
 </ul>
 <h3>Current work</h3>
 <ul>
-<li><p>RecLLM: Large Language Model for Explainable Recommendation</p>
+<li><p>Diary Study of Digital Financial Inclusion of Low-Income Households in Bangladesh</p>
 </li>
 <li><p>Large Language Model for Generation of Medical Image Diagnostic Reports</p>
 </li>
