--- a/index.html
+++ b/index.html
@@ -38,8 +38,8 @@ E-mail: <a href="mailto:wenying@iuj.ac.jp">wenying@iuj.ac.jp</a></p>
 <p>I will obtain my third master’s degree at the International University of Japan, following the first one at the Finance Department at ZUFE in China and the second one at the Math Department in College of William and Mary in the U.S. <br />
 I am currently a research intern at Asian Development Bank Institute in Japan. <br />
 I used to serve as a regional director at Huaxia Bank in charge of Anti Money Laundering & Countering Terrorism Financing. <br />
-Being skilled at statistical techniques and data visualization, I focus on international comparison of economic crisis, particularly undergoing economic downturn and pent-up political tension in China as well as their influence on the world. <br />
-My dream positions include <b>Data Analyst</b> and <b>Researcher</b> in a think tank, consulting firm or international organization. Also, I do some research of <b>CV</b>, such as medical image. </p>
+Being skilled at statistical techniques and data analytics, I focus on international comparison of economic crisis, particularly undergoing economic downturn and pent-up political tension in China as well as their influence on the world. <br />
+My dream positions include <b>Data Analyst</b> and <b>Researcher</b> in a think tank, consulting firm or international organization. Also, I am fascinated with Chinese traditional culture and history. </p>
 <h2>Research</h2>
 <p>My research interests include: </p>
 <ul>
@@ -47,19 +47,21 @@ My dream positions include <b>Data Analyst</b> and <b>Researcher</b> in a think 
 </li>
 <li><p>Casual Relationship betwwen Economic Indicators</p>
 </li>
+<li><p>Nonlinear Optimization in Maple</p>
+</li>
 </ul>
 <h3>Current work</h3>
 <ul>
 <li><p>Diary Study of Digital Financial Inclusion of Low-Income Households in Bangladesh</p>
 </li>
-<li><p>Large Language Model for Generation of Medical Image Diagnostic Reports</p>
+<li><p>Chinese Traditional Culture and its implications on Xi's National Security Strategy</p>
 </li>
-<li><p>BAT: Battery Assessment Transformer based Large Language Models for Remaining Useful Life Prediction</p>
+<li><p>Comparative Research on Economic Policies in Nazi Germany before WWII and Contemporary China</p>
 </li>
-<li><p>Semi-supervised for for Recommendation</p>
+<li><p>Don’t drive smart students away from the US: lobbying for adjustment of Secure Campus Act</p>
 </li>
 </ul>
-<h3>Under review</h3>
+<h3>Course Projects</h3>
 <ol>
 <li><p>X. Yang, <b>X. Zhou</b>, K. Li*, "Layer-wise Contrastive Learning BERT for Sentence Representation".</p>
 </li>
@@ -73,7 +75,7 @@ My dream positions include <b>Data Analyst</b> and <b>Researcher</b> in a think 
 </li>
 <li><p>C. Jin, and <b>X. Zhou</b>*, "GraphAE: Graph AutoEncoders for Drug-Target Interaction Prediction".</p>
 </ol>
-<h3>Recent publications </h3>
+<h3>Publications </h3>
 <ol>
 <li><p>W. Zhang, Y. Lin, Y. Liu, P. Wu, F. Lin*, and <b>X. Zhou</b>*, "Self-Supervised Reinforcement Learning with Dual-reward for Knowledge-aware Recommendation", <i>Applied Soft Computing</i>, Oct. 2022. (IF = 8.263) [<a href="pub/SSRL.pdf">pdf</a>][<a href="https://github.com/XiuzeZhou/cocnn">code</a>]</p>
 </li>
