--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
 <td align="left"><p><b>Research Assistant, </b> <br />
 Research Department, Asian Development Bank Institute <br />
 Minamiuonuma（Remote）, Japan <br /> 
-<b>Regional Directorate on AML & anti-Terrorism Financing, </b> <br />
+<b>Regional Directorate on AML </b> <br />
 Internal Control and Compliance Department, Huaxia Bank Co., Ltd.<br />
 Hangzhou & Beijing, China<br />
 E-mail: <a href="mailto:wenying@iuj.ac.jp">wenying@iuj.ac.jp</a></p>
@@ -38,7 +38,7 @@ E-mail: <a href="mailto:wenying@iuj.ac.jp">wenying@iuj.ac.jp</a></p>
 <p>I will obtain my third master’s degree at the International University of Japan, following the first one at the Finance Department at ZUFE in China and the second one at the Math Department in College of William and Mary in the U.S. <br />
 I am currently a research intern at Asian Development Bank Institute in Japan. <br />
 I used to serve as a regional director at Huaxia Bank in charge of Anti Money Laundering & Countering Terrorism Financing. <br />
-Being skilled at statistical techniques and data analytics, I focus on international comparison of economic crisis, particularly undergoing economic downturn and pent-up political tension in China as well as their influence on the world. <br />
+Being skilled at statistical techniques and data analytics, I focus on international comparison of economic crisis, particularly the undergoing economic downturn and pent-up political tension in China as well as their influence on the world. <br />
 My dream positions include <b>Data Analyst</b> and <b>Researcher</b> in a think tank, consulting firm or international organization. Also, I am fascinated with Chinese traditional culture and history. </p>
 <h2>Research</h2>
 <p>My research interests include: </p>
@@ -63,17 +63,9 @@ My dream positions include <b>Data Analyst</b> and <b>Researcher</b> in a think 
 </ul>
 <h3>Course Projects</h3>
 <ol>
-<li><p>X. Yang, <b>X. Zhou</b>, K. Li*, "Layer-wise Contrastive Learning BERT for Sentence Representation".</p>
+<li><p>Design and Evaluation of a New Workflow for Customer Money-laundering Risk Ranking, <b>Arena & R</b>, a required project for the course ‘Simulation and Modeling’.</p>
 </li>
-<li><p>D. Chen, <b>X. Zhou</b>*, "AttMoE: Attention with Mixture of Experts for Remaining Useful Life Prediction of Lithium-Ion Batteries".</p>
-</li>
-<li><p>Y. Lin, W. Zhang, <b>X. Zhou</b>, F. Lin*, W. Zeng, L. Zou*, Y. Liu, P. Wu, "Knowledge-aware Reasoning with Self-supervised Reinforcement Learning for Explainable Recommendation in MOOCs".</p>
-</li> 
-<li><p><b>X. Zhou</b>*, "Graph Neural Network with Transformer for Sparsity Problem of Recommender Systems".</p>
-</li>
-<li><p>J. Cheng, D. Chen, and <b>X. Zhou</b>*, "Graph-based Feature Crossing to Enhance Recommender Systems".</p>
-</li>
-<li><p>C. Jin, and <b>X. Zhou</b>*, "GraphAE: Graph AutoEncoders for Drug-Target Interaction Prediction".</p>
+<li><p>Patient-Diagnosis Analysis for Improvement of Treatment Quality, <b>SQL & Excel</b>, a required project for the course ‘database management’. </p>
 </ol>
 <h3>Publications </h3>
 <ol>
