--- a/index.html
+++ b/index.html
@@ -43,11 +43,11 @@ My dream positions include <b>Data Analyst</b> and <b>Researcher</b> in a think 
 <h2>Research</h2>
 <p>My research interests include: </p>
 <ul>
-<li><p>Data Visualization in R Programming</p>
+<li><p>Data Visualization（R Programming）</p>
 </li>
 <li><p>Casual Relationship betwwen Economic Indicators</p>
 </li>
-<li><p>Nonlinear Optimization in Maple</p>
+<li><p>Nonlinear Optimization（Maple）</p>
 </li>
 </ul>
 <h3>Current work</h3>
@@ -61,11 +61,15 @@ My dream positions include <b>Data Analyst</b> and <b>Researcher</b> in a think 
 <li><p>Don’t drive smart students away from the US: lobbying for adjustment of Secure Campus Act</p>
 </li>
 </ul>
-<h3>Course Projects</h3>
+<h3>Skills & Languages</h3>
 <ol>
-<li><p>Design and Evaluation of a New Workflow for Customer Money-laundering Risk Ranking, <b>Arena & R</b>, a required project for the course ‘Simulation and Modeling’.</p>
+<li><p>Expert: Linux, R, Arena, Maple, MS Office Suite, Google Workplace. </p>
 </li>
-<li><p>Patient-Diagnosis Analysis for Improvement of Treatment Quality, <b>SQL & Excel</b>, a required project for the course ‘database management’. </p>
+<li><p>Proficient: Python, AMPL, SQL, Latex.</p>
+</li>
+<li><p>Novice: Adobe Photoshop, Tableau, Stata.</p>
+</li>
+<li><p>Proficient: English; Native: Chinese; Elementary: Japanese.</p>
 </ol>
 <h3>Publications </h3>
 <ol>
