--- a/index.html
+++ b/index.html
@@ -41,13 +41,15 @@ I used to serve as a regional director at Huaxia Bank in charge of Anti Money La
 Being skilled at statistical techniques and data analytics, I focus on international comparison of economic crisis, particularly the undergoing economic downturn and pent-up political tension in China as well as their influence on the world. <br />
 My dream positions include <b>Data Analyst</b> and <b>Researcher</b> in a think tank, consulting firm or international organization. Also, I am fascinated with Chinese traditional culture and history. </p>
 <h2>Research</h2>
-<p>My research interests include: </p>
+<p>My research interests include Data Visualization（R Programming）and Optimization（Maple） with skillsets: </p>
 <ul>
-<li><p>Data Visualization（R Programming）</p>
+<li><p>Expert: Linux, R, Arena, Maple, MS Office Suite, Google Workplace. </p>
 </li>
-<li><p>Casual Relationship betwwen Economic Indicators</p>
+<li><p>Proficient: Python, AMPL, SQL, Latex. </p>
 </li>
-<li><p>Nonlinear Optimization（Maple）</p>
+<li><p>Novice: Adobe Photoshop, Tableau, Stata. </p>
+</li>
+<li><p>Languages: English (Professional), Chinese (Native), Japanese (Elementary) </p>
 </li>
 </ul>
 <h3>Current work</h3>
