--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
 <table class="imgtable"><tr><td>
 <a href="https://wshen01.github.io/"><img src="photos/bio.jpg" alt="alt text" width="131px" height="160px" /></a>&nbsp;</td>
 <td align="left"><p><b>Research Assistant, </b> <br />
-Research Department, Asian Development Bank Institute <br />
+Research Department, Asian Development Bank Institute (ADBI) <br />
 Minamiuonuma（Remote）, Japan <br /> 
 <b>Regional Directorate on AML </b> <br />
 Internal Control and Compliance Department, Huaxia Bank Co., Ltd.<br />
@@ -41,7 +41,7 @@ I used to serve as a regional director at Huaxia Bank in charge of Anti Money La
 Being skilled at statistical techniques and data analytics, I focus on international comparison of economic crisis, particularly the undergoing economic downturn and pent-up political tension in China as well as their influence on the world. <br />
 My dream positions include <b>Data Analyst</b> and <b>Researcher</b> in a think tank, consulting firm or international organization. Also, I am fascinated with Chinese traditional culture and history. </p>
 <h2>Research</h2>
-<p>My research interests include Data Visualization（R Programming）and Optimization（Maple） with skillsets: </p>
+<p>My research interests include Data Visualization（R）and Optimization（Maple）with skillsets: </p>
 <ul>
 <li><p>Expert: Linux, R, Arena, Maple, MS Office Suite, Google Workplace. </p>
 </li>
@@ -54,7 +54,7 @@ My dream positions include <b>Data Analyst</b> and <b>Researcher</b> in a think 
 </ul>
 <h3>Current work</h3>
 <ul>
-<li><p>Diary Study of Digital Financial Inclusion of Low-Income Households in Bangladesh</p>
+<li><p>Diary Study of Digital Financial Inclusion of Low-Income Households in Bangladesh (ADBI)</p>
 </li>
 <li><p>Chinese Traditional Culture and its implications on Xi's National Security Strategy</p>
 </li>
@@ -73,14 +73,14 @@ My dream positions include <b>Data Analyst</b> and <b>Researcher</b> in a think 
 </li>
 <li><p>Proficient: English; Native: Chinese; Elementary: Japanese.</p>
 </ol>
-<h3>Publications </h3>
+<h3>Papers & Publications </h3>
 <ol>
-<li><p>W. Zhang, Y. Lin, Y. Liu, P. Wu, F. Lin*, and <b>X. Zhou</b>*, "Self-Supervised Reinforcement Learning with Dual-reward for Knowledge-aware Recommendation", <i>Applied Soft Computing</i>, Oct. 2022. (IF = 8.263) [<a href="pub/SSRL.pdf">pdf</a>][<a href="https://github.com/XiuzeZhou/cocnn">code</a>]</p>
+<li><p>Publication: Ye Qian, <b>Shen Wenying</b>*. "Comparative research on causes of two debt crises in Latin America and Europe and their inspiration to China". <i>Inquiry into Economic Issues</i> (CSSCI; national second level periodical). Oct. 2011, Page167-174. (IF = 8.263) [<a href="pub/Debt Crisis.pdf">pdf</a>][<a href="https://github.com/XiuzeZhou/cocnn">code</a>]</p>
 </li>
 <!--
 <li><p>Y. Ding, S. Jia, T. Ma*, B. Mao, <b>X. Zhou</b>, L. Liu, D. Han, and M. Chen, "Integrating Stock Features and Global Information via Large Language Models for Enhanced Stock Return Prediction", <i>In Proceedings of the 32nd International Joint Conference on Artificial Intelligence (IJCAI-23)</i>, Aug. 2023. </p>
 </li>
-<li><p>M. Chen, T. Ma, and <b>X. Zhou</b>*, "CoCNN: Co-occurrence CNN for Recommendation", <i>Expert Systems with Applications</i>, Jun. 2022, 195, pp. 116595. (IF = 8.665) [<a href="https://github.com/XiuzeZhou/cocnn">code</a>]</p>
+<li><p>Graduation Thesis. <b>Shen Wenying</b>, "The Relationship between Chinese fiscal deficit and current account: A research based on the vector auto-regression model", <i>outstanding thesis award/i>, Mar. 2012.[<a href="https://github.com/XiuzeZhou/cocnn">code</a>]</p>
 </li>
 <li><p>M. Chen, Y. Li, <b>X. Zhou</b>*, "CoNet: Co-occurrence Neural Networks for Recommendation", <i>Future Generation Computer Systems</i>, Nov. 2021, 124, pp. 308-314. (IF = 7.307) [<a href="https://github.com/XiuzeZhou/conet">code</a>]</p>
 </li>
@@ -88,24 +88,6 @@ My dream positions include <b>Data Analyst</b> and <b>Researcher</b> in a think 
 </li>
 -->
 <li><p>D. Chen, W. Hong, and <b>X. Zhou</b>*, "Transformer Network for Remaining Useful Life Prediction of Lithium-Ion Batteries", <i>IEEE Access</i>, 2022, 10, pp. 19621-19628. (IF = 3.367) [<a href="pub/Transformer.pdf">pdf</a>][<a href="https://github.com/XiuzeZhou/RUL">code</a>]</p>
-</li>
-<li><p>X. Wu, W. Zeng, F. Lin*, and <b>X. Zhou</b>, "NeuRank: Learning to Ranking with Neural Networks for Drug-Target Interaction Prediction", <i>BMC Bioinformatics</i>, Nov. 2021, 22, pp. 567. (IF = 3.328) [<a href="pub/neurank.pdf">pdf</a>][<a href="https://github.com/XiuzeZhou/conet">code</a>]</p>
-</li>
-<li><p><b>X. Zhou</b>* and S. Wu, "Rating LDA Model for Collaborative Filtering", <i>Knowledge-Based Systems</i>, Oct. 2016, 110, pp. 135-143. (IF = 8.139) [<a href="pub/RLDA.pdf">pdf</a>]</p>
-</li>
-<li><p>K. Li, <b>X. Zhou</b>, F. Lin*, W. Zeng, B. Wang, and G. Alterovitz, "Sparse Online Collaborative Filtering with Dynamic Regularization", <i>Information Sciences</i>, Dec. 2019, 505, pp. 535-548. (IF = 8.233) [<a href="pub/SOCF.pdf">pdf</a>]</p>
-</li>
-<li><p><b>X. Zhou</b>, W. Shu, F. Lin*, and B. Wang, "Confidence-Weighted Bias Model for Online Collaborative Filtering", <i>Applied Soft Computing</i>, Sep. 2018, 70, pp. 1042-1053. (IF = 8.263)</p>
-</li>
-<li><p>K. Li, <b>X. Zhou</b>, F. Lin*, W. Zeng, and G. Alterovitz, "Deep Probabilistic Matrix Factorization Framework for Online Collaborative Filtering", <i>IEEE Access</i>, Mar. 2019, 7, pp. 56117-56128. (IF = 3.367)</p>
-</li>
-<li><p>F. Lin, <b>X. Zhou</b>, and W. Zeng*, "Sparse Online Learning for Collaborative Filtering", <i>International Journal of Computers Communications & Control</i>, Apr. 2016, 11 (2), pp. 248-258. (IF = 2.093)</p>
-</li>
-<li><p>S. Lu, H. Chen, <b>X. Zhou</b>, B. Wang, H. Wang*, and Q. Hong, "Graph-Based Collaborative Filtering with MLP", <i>Mathematical Problems in Engineering</i>, Dec. 2018, 2018, pp. 1-10. (IF = 1.305)</p>
-</li>
-<li><p><b>X. Zhou</b>, F. Lin*, L. Yang, J. Nie, Q. Tan, W. Zeng, and N. Zhang, "Load Balancing Prediction Method of Cloud Storage based on Analytic Hierarchy Process and Hybrid Hierarchical Genetic Algorithm", <i>SpringerPlus</i>, Nov. 2016, 5 (1), pp. 1989-2012. (IF = 1.780)</p>
-</li>
-<li><p><b>X. Zhou</b>*, and S. Wu, "The Biterm Author Topic in the Sentences Model for E-Mail Analysis", <i>IEICE Transactions on Information and Systems</i>, Aug. 2017, E100.D (8), pp. 1852-1859. (IF = 0.449)</p>
 </li>
 </ol>
 <p><b>Note</b>: * indicates the corresponding author.</p>
