--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@ Research Department, Asian Development Bank Institute (ADBI) <br />
 Minamiuonuma（Remote）, Japan <br /> 
 <b>Regional Directorate on AML </b> <br />
 Internal Control and Compliance Department, Huaxia Bank Co., Ltd.<br />
-Hangzhou & Beijing, China<br />
+Zhejiang, China<br />
 E-mail: <a href="mailto:wenying@iuj.ac.jp">wenying@iuj.ac.jp</a></p>
 </td></tr></table>
 <h2>About me</h2>
@@ -41,7 +41,7 @@ I used to serve as a regional director at Huaxia Bank in charge of Anti Money La
 Being skilled at statistical techniques and data analytics, I focus on international comparison of economic crisis, particularly the undergoing economic downturn and pent-up political tension in China as well as their influence on the world. <br />
 My dream positions include <b>Data Analyst</b> and <b>Researcher</b> in a think tank, consulting firm or international organization. Also, I am fascinated with Chinese traditional culture and history. </p>
 <h2>Research</h2>
-<p>My research interests include Data Visualization（R）and Optimization（Maple）with skillsets: </p>
+<p>My research interests include <b>Data Visualization</b>（R）and <b>Optimization</b>（Maple）with skillsets: </p>
 <ul>
 <li><p>Expert: Linux, R, Arena, Maple, MS Office Suite, Google Workplace. </p>
 </li>
