--- a/index.html
+++ b/index.html
@@ -75,18 +75,18 @@ My dream positions include <b>Data Analyst</b> and <b>Researcher</b> in a think 
 </ol>
 <h3>Papers & Publications </h3>
 <ol>
-<li><p>Publication: Ye Qian, <b>Shen Wenying</b>*. "Comparative research on causes of two debt crises in Latin America and Europe and their inspiration to China". <i>Inquiry into Economic Issues</i> (CSSCI; national second level periodical). Oct. 2011, Page167-174. (IF = 8.263) [<a href="pub/Debt Crisis.pdf">pdf</a>][<a href="https://github.com/XiuzeZhou/cocnn">code</a>]</p>
+<li><p>Publication: Ye Qian, <b>Shen Wenying</b>*. "Comparative research on causes of two debt crises in Latin America and Europe and their inspiration to China". <i>Inquiry into Economic Issues</i> (CSSCI; national second level periodical). Oct. 2011, Page167-174. [<a href="pub/Debt Crisis.pdf">pdf</a>][<a href="https://github.com/XiuzeZhou/cocnn">code</a>]</p>
 </li>
 <!--
 <li><p>Y. Ding, S. Jia, T. Ma*, B. Mao, <b>X. Zhou</b>, L. Liu, D. Han, and M. Chen, "Integrating Stock Features and Global Information via Large Language Models for Enhanced Stock Return Prediction", <i>In Proceedings of the 32nd International Joint Conference on Artificial Intelligence (IJCAI-23)</i>, Aug. 2023. </p>
 </li>
+-->
 <li><p>Graduation Thesis. <b>Shen Wenying</b>, "The Relationship between Chinese fiscal deficit and current account: A research based on the vector auto-regression model", <i>outstanding thesis award/i>, Mar. 2012.[<a href="https://github.com/XiuzeZhou/cocnn">code</a>]</p>
 </li>
 <li><p>M. Chen, Y. Li, <b>X. Zhou</b>*, "CoNet: Co-occurrence Neural Networks for Recommendation", <i>Future Generation Computer Systems</i>, Nov. 2021, 124, pp. 308-314. (IF = 7.307) [<a href="https://github.com/XiuzeZhou/conet">code</a>]</p>
 </li>
 <li><p>M. Chen, <b>X. Zhou</b>*, "DeepRank: Learning to Rank with Neural Networks for Recommendation", <i>Knowledge-Based Systems</i>, Dec. 2020, 209, pp. 106478. (IF = 8.139) [<a href="https://github.com/XiuzeZhou/deeprank">code</a>]</p>
 </li>
--->
 <li><p>D. Chen, W. Hong, and <b>X. Zhou</b>*, "Transformer Network for Remaining Useful Life Prediction of Lithium-Ion Batteries", <i>IEEE Access</i>, 2022, 10, pp. 19621-19628. (IF = 3.367) [<a href="pub/Transformer.pdf">pdf</a>][<a href="https://github.com/XiuzeZhou/RUL">code</a>]</p>
 </li>
 </ol>
