--- a/index.html
+++ b/index.html
@@ -75,7 +75,7 @@ My dream positions include <b>Data Analyst</b> and <b>Researcher</b> in a think 
 </ol>
 <h3>Papers & Publications </h3>
 <ol>
-<li><p>Publication: Ye Qian, <b>Shen Wenying</b>*. "Comparative research on causes of two debt crises in Latin America and Europe and their inspiration to China". <i>Inquiry into Economic Issues</i> (CSSCI; national second level periodical). Oct. 2011, Page167-174. [<a href="pub/Debt Crisis.pdf">pdf</a>][<a href="https://github.com/XiuzeZhou/cocnn">code</a>]</p>
+<li><p>Publication: Ye Qian, <b>Shen Wenying</b>. "Comparative research on causes of two debt crises in Latin America and Europe and their inspiration to China". <i>Inquiry into Economic Issues</i> (CSSCI; national second level periodical). Oct. 2011, Page167-174. [<a href="pub/Debt Crisis.pdf">pdf</a>][<a href="https://github.com/XiuzeZhou/cocnn">code</a>]</p>
 </li>
 <!--
 <li><p>Y. Ding, S. Jia, T. Ma*, B. Mao, <b>X. Zhou</b>, L. Liu, D. Han, and M. Chen, "Integrating Stock Features and Global Information via Large Language Models for Enhanced Stock Return Prediction", <i>In Proceedings of the 32nd International Joint Conference on Artificial Intelligence (IJCAI-23)</i>, Aug. 2023. </p>
@@ -90,7 +90,6 @@ My dream positions include <b>Data Analyst</b> and <b>Researcher</b> in a think 
 <li><p>D. Chen, W. Hong, and <b>X. Zhou</b>*, "Transformer Network for Remaining Useful Life Prediction of Lithium-Ion Batteries", <i>IEEE Access</i>, 2022, 10, pp. 19621-19628. (IF = 3.367) [<a href="pub/Transformer.pdf">pdf</a>][<a href="https://github.com/XiuzeZhou/RUL">code</a>]</p>
 </li>
 </ol>
-<p><b>Note</b>: * indicates the corresponding author.</p>
 <p><a href="https://scholar.google.com/citations?user=xTzN-qoAAAAJ&amp;hl=zh-CN&amp;oi=ao">Full list of publications in Google Scholar</a>.</p>
 <h3>Academic service</h3>
 <p><b>Reviewer</b></p>
