--- a/index.html
+++ b/index.html
@@ -77,11 +77,7 @@ My dream positions include <b>Data Analyst</b> and <b>Researcher</b> in a think 
 <ol>
 <li><p>Publication: Ye Qian, <b>Shen Wenying</b>. "Comparative research on causes of two debt crises in Latin America and Europe and their inspiration to China". <i>Inquiry into Economic Issues</i> (CSSCI; national second level periodical). Oct. 2011, Page167-174. [<a href="pub/Debt Crisis.pdf">pdf</a>][<a href="https://github.com/XiuzeZhou/cocnn">code</a>]</p>
 </li>
-<!--
-<li><p>Y. Ding, S. Jia, T. Ma*, B. Mao, <b>X. Zhou</b>, L. Liu, D. Han, and M. Chen, "Integrating Stock Features and Global Information via Large Language Models for Enhanced Stock Return Prediction", <i>In Proceedings of the 32nd International Joint Conference on Artificial Intelligence (IJCAI-23)</i>, Aug. 2023. </p>
-</li>
--->
-<li><p>Graduation Thesis. <b>Shen Wenying</b>, "The Relationship between Chinese fiscal deficit and current account: A research based on the vector auto-regression model", <i>outstanding thesis award</i>, Mar. 2012.[<a href="https://github.com/XiuzeZhou/cocnn">code</a>]</p>
+<li><p>Graduate Degree Thesis. <b>Shen Wenying</b>, "The Relationship between Chinese fiscal deficit and current account: A research based on the vector auto-regression model", <i>outstanding thesis award</i>, Mar. 2012.[<a href="pub/Abstract.pdf">code</a>]</p>
 </li>
 <li><p>M. Chen, Y. Li, <b>X. Zhou</b>*, "CoNet: Co-occurrence Neural Networks for Recommendation", <i>Future Generation Computer Systems</i>, Nov. 2021, 124, pp. 308-314. (IF = 7.307) [<a href="https://github.com/XiuzeZhou/conet">code</a>]</p>
 </li>
