--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@ Zhejiang, China<br />
 E-mail: <a href="mailto:wenying@iuj.ac.jp">wenying@iuj.ac.jp</a></p>
 </td></tr></table>
 <h2>About me</h2>
-<p>I will obtain my third master’s degree at the International University of Japan, following the first one at the Finance Department at ZUFE in China and the second one at the Math Department in College of William and Mary in the U.S. <br />
+<p>I will obtain my third master’s degree at the International University of Japan, following the first one at the Finance Department at Zhejiang Univeristy of Finance and Economics in China and the second one at the Math Department in College of William and Mary in the U.S. <br />
 I am currently a research intern at Asian Development Bank Institute in Japan. <br />
 I used to serve as a regional director at Huaxia Bank in charge of Anti Money Laundering & Countering Terrorism Financing. <br />
 Being skilled at statistical techniques and data analytics, I focus on international comparison of economic crisis, particularly the undergoing economic downturn and pent-up political tension in China as well as their influence on the world. <br />
@@ -85,18 +85,14 @@ My dream positions include <b>Data Analyst</b> and <b>Researcher</b> in a think 
 </li>
 <li><p>D. Chen, W. Hong, and <b>X. Zhou</b>*, "Transformer Network for Remaining Useful Life Prediction of Lithium-Ion Batteries", <i>IEEE Access</i>, 2022, 10, pp. 19621-19628. (IF = 3.367) [<a href="pub/Transformer.pdf">pdf</a>][<a href="https://github.com/XiuzeZhou/RUL">code</a>]</p>
 </li>
-</ol>
-<p><a href="https://scholar.google.com/citations?user=xTzN-qoAAAAJ&amp;hl=zh-CN&amp;oi=ao">Full list of publications in Google Scholar</a>.</p>
-<h3>Academic service</h3>
-<p><b>Reviewer</b></p>
-<ul>
-<li><p>IEEE Transactions on Neural Networks and Learning Systems</p>
+<h3>Academic Awards</h3>
+<li><p>Yamaguchi Ikuei Scholarship, International University of Japan (2022~2024) </p>
 </li>  
-<li><p>IEEE Transactions on Industrial Informatics</p>
+<li><p>Tuition Award as a Teaching Assistant, College of William and Mary (2019~2021) </p>
 </li>
-<li><p>ACM Transactions on Knowledge Discovery from Data</p>
+<li><p>Merit Graduate Student, Second Prize for Excellent Graduate Students, top 2 in 50, ZUFE (2010 ~ 2012) </p>
 </li>
-<li><p>IEEE Access</p>
+<li><p>The 2016 Outstanding Individual, Huaxia Bank Co., Ltd. (2017) </p>
 </li>
 </ul>
 <p><a href="https://publons.com/researcher/3034188/xiuze-zhou/">More details in Publons</a></p>
