--- a/index.html
+++ b/index.html
@@ -79,10 +79,6 @@ My dream positions include <b>Data Analyst</b> and <b>Researcher</b> in a think 
 </li>
 <li><p>Graduate Degree Thesis. <b>Shen Wenying</b>, "The Relationship between Chinese fiscal deficit and current account: A research based on the vector auto-regression model", <i>outstanding thesis award</i>, Mar. 2012.[<a href="pub/Abstract.pdf">code</a>]</p>
 </li>
-<li><p>M. Chen, Y. Li, <b>X. Zhou</b>*, "CoNet: Co-occurrence Neural Networks for Recommendation", <i>Future Generation Computer Systems</i>, Nov. 2021, 124, pp. 308-314. (IF = 7.307) [<a href="https://github.com/XiuzeZhou/conet">code</a>]</p>
-</li>
-<li><p>M. Chen, <b>X. Zhou</b>*, "DeepRank: Learning to Rank with Neural Networks for Recommendation", <i>Knowledge-Based Systems</i>, Dec. 2020, 209, pp. 106478. (IF = 8.139) [<a href="https://github.com/XiuzeZhou/deeprank">code</a>]</p>
-</li>
 <li><p>D. Chen, W. Hong, and <b>X. Zhou</b>*, "Transformer Network for Remaining Useful Life Prediction of Lithium-Ion Batteries", <i>IEEE Access</i>, 2022, 10, pp. 19621-19628. (IF = 3.367) [<a href="pub/Transformer.pdf">pdf</a>][<a href="https://github.com/XiuzeZhou/RUL">code</a>]</p>
 </li>
 <h3>Academic Awards</h3>
@@ -96,18 +92,18 @@ My dream positions include <b>Data Analyst</b> and <b>Researcher</b> in a think 
 </li>
 </ul>
 <p><a href="https://publons.com/researcher/3034188/xiuze-zhou/">More details in Publons</a></p>
-<h2>Projects</h2>
+<h2>Course Projects</h2>
 <ol>
-<li><p>Advertising Platform Development, 01.2022-Present</p></li>
+<li><p><b>Data Mining</b>: Predicting popularity of songs based on Spotify's Web API, participated as a group member, Mar.2021-May.2021</p></li>
 <ul>
-<li><p>Provide advertising strategies and solutions for advertisers to maximize revenue</p>
+<li><p>to fill out</p>
 </li>
-<li><p>Provide automated advertising instead of manual selection</p>
+<li><p>to fill out</p>
 </li>
 <li><p>Use users' history information to build their profiles, and then select the target users</p>
 </li>
 </ul>
-<li><p>Campus Recommender System, 03.2021-12.2021</p></li>
+<li><p><b>Simulation and Modeling</b>: Design and Evaluation of a New Workflow for Customer Money-laundering Risk Ranking, conducted independently, Oct.2020-Nov.2020</p></li>
 <ul>
 <li><p>Built user profiles based on the data crawled from websites</p>
 </li>
@@ -116,7 +112,7 @@ My dream positions include <b>Data Analyst</b> and <b>Researcher</b> in a think 
 <li><p>Recommended information from within and outside the university based on faculty research, courses taught, and interests</p>
 </li>
 </ul>
-<li><p>Online Education Explainable Recommender System, NSFC, 06.2018-12.2018</p></li>
+<li><p><b>Database Management</b>: Patient-Diagnosis Analysis for Improvement of Treatment Quality, participated as a group member, Nov.2020-Dec.2020</p></li>
 <ul>
 <li><p>Summarized over 500,000 exercises and classified their knowledge points from all subjects</p>
 </li>
