--- a/index.html
+++ b/index.html
@@ -84,9 +84,9 @@ My dream positions include <b>Data Analyst</b> and <b>Researcher</b> in a think 
 </ol>
 <h3>Academic Awards</h3>
 <ul>
-<li><p>Yamaguchi Ikuei Scholarship, International University of Japan (2022~2024) </p>
+<li><p>Yamaguchi Ikuei Scholarship, International University of Japan (2022 ~ 2024) </p>
 </li>  
-<li><p>Tuition Award as a Teaching Assistant, College of William and Mary (2019~2021) </p>
+<li><p>Tuition Award as a Teaching Assistant, College of William and Mary (2019 ~ 2021) </p>
 </li>
 <li><p>Merit Graduate Student, Second Prize for Excellent Graduate Students, top 2 in 50, ZUFE (2010 ~ 2012) </p>
 </li>
@@ -98,29 +98,33 @@ My dream positions include <b>Data Analyst</b> and <b>Researcher</b> in a think 
 <ol>
 <li><p><b>Data Mining</b>: Predicting popularity of songs based on Spotify's Web API, participated as a group member, Mar.2021-May.2021</p></li>
 <ul>
-<li><p>to fill out</p>
+<li><p>Used a Spotify dataset to analyze popularity scores of tracks based on audio features</p>
 </li>
-<li><p>to fill out</p>
+<li><p>Conducted supervised and unsupervised methods to explore the popularity and genre of the songs</p>
 </li>
-<li><p>Use users' history information to build their profiles, and then select the target users</p>
+<li><p>Performed regression analysis on popularity and predicted genre</p>
 </li>
 </ul>
 <li><p><b>Simulation and Modeling</b>: Design and Evaluation of a New Workflow for Customer Money-laundering Risk Ranking, conducted independently, Oct.2020-Nov.2020</p></li>
 <ul>
-<li><p>Built user profiles based on the data crawled from websites</p>
+<li><p>Obtained the best fit of the service times and inter-arrival times: Weibull distribution</p>
 </li>
-<li><p>Recommended information, such as courses from MOOC, and publications from Arxiv, to students</p>
+<li><p>Evaluated and compared two types of money-laundering risk ranking workflows by constructing discrete-event simulation model with boundary constraints</p>
 </li>
-<li><p>Recommended information from within and outside the university based on faculty research, courses taught, and interests</p>
+<li><p>Perform sensitivity analysis and obtained an optimized solution of the centralized workflow</p>
 </li>
+<li><p>conduct the presentation showing policy implication - how closely the output matched the real world situations</p>
+</li>  
 </ul>
 <li><p><b>Database Management</b>: Patient-Diagnosis Analysis for Improvement of Treatment Quality, participated as a group member, Nov.2020-Dec.2020</p></li>
 <ul>
-<li><p>Summarized over 500,000 exercises and classified their knowledge points from all subjects</p>
+<li><p>Preprocessed data in R and created the Entity Relationship Diagram and Relational Schema</p>
 </li>
-<li><p>Applied matrix factorization for online learning and recommendation of exercises based on interaction of users</p>
+<li><p>Helped combined the datasets through ETL approach and write 10 SQL queries to identify influential variables</p>
 </li>
-<li><p>Added latent features learned by neural networks from exercises to online matrix factorization for better performance</p>
+<li><p>Visualized the outcome in Tableau and put forward the reasonable explanations</p>
+</li>
+<li><p>Wrote “2. Modeling Approach”, “5. Visualization” and “6. Conclusion” of the report</p>
 </li>
 </ul>
 </ol>
