--- a/index.html
+++ b/index.html
@@ -129,16 +129,14 @@ My dream positions include <b>Data Analyst</b> and <b>Researcher</b> in a think 
 </ul>
 </ol>
 <h2>Education</h2>
-<p>M.E., Pattern Recognition and Intelligent Systems, <a href="https://www.xmu.edu.cn/">Xiamen University</a>, 06.2016</p>
+<p>Master of Science degree in Political Science, <a href="https://www.iuj.ac.jp/">International University of Japan</a>, 06.2024</p>
 <ul>
-<li><p>Awards: Principal Level Scholarship (1st in admission)</p>
-</li>
-<li><p>Main Courses: Machine Learning, Design of Neural Networks, Digital Image Processing, Time Series Analysis, Pattern Recognition, Data Mining and Its Application, Artificial Intelligent: Theory and Application, Recommender System.</p>
+<li><p>Main Courses: Statistical Methods, Research Methods, Applied Econometrics, Comparative Government and Politics, Local Government and Public Service, Political Institutions and Governance, Diplomacy and Statecraft, International Relations in Eurasia, American Foreign Policy.</p>
 </li>
 </ul>
-<p>B.E., Automation, <a href="http://www.zust.edu.cn/">Zhejiang University of Science and Technology</a>, 06.2012</p>
+<p>Master of Science degree in Computer Science with Concentration of <a href="https://www.wm.edu/as/mathematics/graduate/cor/">Computational Operations Research</a>,  <a href="https://www.wm.edu/">College of William and Mary</a>, 06.2021</p>
 <ul>
-<li><p>Main Courses: C Programming, Embedded Systems, Computer Network and Communication, Computer Control System.</p>
+<li><p>Main Courses: Probability, Mathematical Statistics, Linear Regression, Integer Programming, Nonlinear Regression, Simulation and Modeling, Database Management, Data Mining, Reliability.</p>
 </li>
 </ul>
 <h2>Work experience</h2>
