--- a/index.html
+++ b/index.html
@@ -96,7 +96,8 @@ My dream positions include <b>Data Analyst</b> and <b>Researcher</b> in a think 
 <p><a href="https://publons.com/researcher/3034188/xiuze-zhou/">More details in Publons</a></p>
 <h2>Course Projects</h2>
 <ol>
-<li><p><b>Data Mining</b>: Predicting popularity of songs based on Spotify's Web API, participated as a group member, Mar.2021-May.2021</p></li>
+<li><p><b>Data Mining</b>: Predicting popularity of songs based on Spotify's Web API
+  participated as a group member, Mar.2021-May.2021</p></li>
 <ul>
 <li><p>Used a Spotify dataset to analyze popularity scores of tracks based on audio features</p>
 </li>
@@ -105,7 +106,8 @@ My dream positions include <b>Data Analyst</b> and <b>Researcher</b> in a think 
 <li><p>Performed regression analysis on popularity and predicted genre</p>
 </li>
 </ul>
-<li><p><b>Simulation and Modeling</b>: Design and Evaluation of a New Workflow for Customer Money-laundering Risk Ranking, conducted independently, Oct.2020-Nov.2020</p></li>
+<li><p><b>Simulation and Modeling</b>: Design and Evaluation of a New Workflow for Customer Money-laundering Risk Ranking 
+  conducted independently, Oct.2020-Nov.2020</p></li>
 <ul>
 <li><p>Obtained the best fit of the service times and inter-arrival times: Weibull distribution</p>
 </li>
@@ -116,7 +118,8 @@ My dream positions include <b>Data Analyst</b> and <b>Researcher</b> in a think 
 <li><p>conduct the presentation showing policy implication - how closely the output matched the real world situations</p>
 </li>  
 </ul>
-<li><p><b>Database Management</b>: Patient-Diagnosis Analysis for Improvement of Treatment Quality, participated as a group member, Nov.2020-Dec.2020</p></li>
+<li><p><b>Database Management</b>: Patient-Diagnosis Analysis for Improvement of Treatment Quality 
+  participated as a group member, Nov.2020-Dec.2020</p></li>
 <ul>
 <li><p>Preprocessed data in R and created the Entity Relationship Diagram and Relational Schema</p>
 </li>
