--- a/index.html
+++ b/index.html
@@ -132,14 +132,24 @@ My dream positions include <b>Data Analyst</b> and <b>Researcher</b> in a think 
 </ul>
 </ol>
 <h2>Education</h2>
-<p>Master of Science degree in Political Science, <a href="https://www.iuj.ac.jp/">International University of Japan</a>, 06.2024</p>
+<p>Master of Science degree in Political Science, <a href="https://www.iuj.ac.jp/">International University of Japan</a> (IUJ), Jun.2024</p>
 <ul>
 <li><p>Main Courses: Statistical Methods, Research Methods, Applied Econometrics, Comparative Government and Politics, Local Government and Public Service, Political Institutions and Governance, Diplomacy and Statecraft, International Relations in Eurasia, American Foreign Policy.</p>
 </li>
 </ul>
-<p>Master of Science degree in Computer Science with Concentration of <a href="https://www.wm.edu/as/mathematics/graduate/cor/">Computational Operations Research</a>,  <a href="https://www.wm.edu/">College of William and Mary</a>, 06.2021</p>
+<p>Master of Science degree in Computer Science with Concentration of <a href="https://www.wm.edu/as/mathematics/graduate/cor/">Computational Operations Research</a>,  <a href="https://www.wm.edu/">College of William and Mary</a> (WM), Jun.2021</p>
 <ul>
-<li><p>Main Courses: Probability, Mathematical Statistics, Linear Regression, Integer Programming, Nonlinear Regression, Simulation and Modeling, Database Management, Data Mining, Reliability.</p>
+<li><p>Main Courses: Probability, Mathematical Statistics, Linear Programming, Integer Programming, Nonlinear Optimization, Simulation and Modeling, Database Management, Data Mining, Reliability.</p>
+</li>
+</ul>
+<p>Master of Science degree in Finance, <a href="https://english.zufe.edu.cn/">Zhejiang University of Finance & Economics</a> (ZUFE), Mar.2012</p>
+<ul>
+<li><p>Main Courses: Calculus I, Calculus II (including Multivariable Calculus), linear algebra, Public Finance(bilingual), Public Policy Analysis.</p>
+</li>
+</ul>
+<p>Bachelor of Science degree in Economics, <a href="https://english.zufe.edu.cn/">Zhejiang University of Finance & Economics</a> (ZUFE), Jun.2008</p>
+<ul>
+<li><p>Main Courses: .</p>
 </li>
 </ul>
 <h2>Work experience</h2>
