--- a/index.html
+++ b/index.html
@@ -96,7 +96,7 @@ My dream positions include <b>Data Analyst</b> and <b>Researcher</b> in a think 
 <p><a href="https://publons.com/researcher/3034188/xiuze-zhou/">More details in Publons</a></p>
 <h2>Course Projects</h2>
 <ol>
-<li><p><b>Data Mining</b>: Predicting popularity of songs based on Spotify's Web API
+<li><p>Data Mining: <b>Predicting popularity of songs based on Spotify's Web API</b>,
   participated as a group member, Mar.2021-May.2021</p></li>
 <ul>
 <li><p>Used a Spotify dataset to analyze popularity scores of tracks based on audio features</p>
@@ -106,7 +106,7 @@ My dream positions include <b>Data Analyst</b> and <b>Researcher</b> in a think 
 <li><p>Performed regression analysis on popularity and predicted genre</p>
 </li>
 </ul>
-<li><p><b>Simulation and Modeling</b>: Design and Evaluation of a New Workflow for Customer Money-laundering Risk Ranking 
+<li><p>Simulation and Modeling: <b>Design and Evaluation of a New Workflow for Customer Money-laundering Risk Ranking</b>, 
   conducted independently, Oct.2020-Nov.2020</p></li>
 <ul>
 <li><p>Obtained the best fit of the service times and inter-arrival times: Weibull distribution</p>
@@ -115,10 +115,10 @@ My dream positions include <b>Data Analyst</b> and <b>Researcher</b> in a think 
 </li>
 <li><p>Perform sensitivity analysis and obtained an optimized solution of the centralized workflow</p>
 </li>
-<li><p>conduct the presentation showing policy implication - how closely the output matched the real world situations</p>
+<li><p>Conduct the presentation showing policy implication - how closely the output matched the real world situations</p>
 </li>  
 </ul>
-<li><p><b>Database Management</b>: Patient-Diagnosis Analysis for Improvement of Treatment Quality 
+<li><p>Database Management: <b>Patient-Diagnosis Analysis for Improvement of Treatment Quality</b>, 
   participated as a group member, Nov.2020-Dec.2020</p></li>
 <ul>
 <li><p>Preprocessed data in R and created the Entity Relationship Diagram and Relational Schema</p>
