--- a/index.html
+++ b/index.html
@@ -137,7 +137,7 @@ My dream positions include <b>Data Analyst</b> and <b>Researcher</b> in a think 
 <li><p>Main Courses: Statistical Methods, Research Methods, Applied Econometrics, Comparative Government and Politics, Local Government and Public Service, Political Institutions and Governance, Diplomacy and Statecraft, International Relations in Eurasia, American Foreign Policy.</p>
 </li>
 </ul>
-<p>Master of Science degree in Computer Science with Concentration of <a href="https://www.wm.edu/as/mathematics/graduate/cor/">Computational Operations Research</a>,  <a href="https://www.wm.edu/">College of William and Mary</a> (WM), Jun.2021</p>
+<p>Master of Science degree in <a href="https://www.wm.edu/as/mathematics/graduate/cor/">Computational Operations Research</a>,  <a href="https://www.wm.edu/">College of William and Mary</a> (WM), Jun.2021</p>
 <ul>
 <li><p>Main Courses: Probability, Mathematical Statistics, Linear Programming, Integer Programming, Nonlinear Optimization, Simulation and Modeling, Database Management, Data Mining, Reliability.</p>
 </li>
