--- a/index.html
+++ b/index.html
@@ -96,7 +96,7 @@ My dream positions include <b>Data Analyst</b> and <b>Researcher</b> in a think 
 <p><a href="https://publons.com/researcher/3034188/xiuze-zhou/">More details in Publons</a></p>
 <h2>Course Projects</h2>
 <ol>
-<li><p>Data Mining: <b>Predicting popularity of songs based on Spotify's Web API</b>, participated as a group member, Mar.2021-Apr.2021. [<a href="pub/Spotify Data Analytics.pdf">pdf</a>][<a href="https://github.com/XiuzeZhou/cocnn">code</a>]</p></li>
+<li><p>Data Mining: <b>Predicting popularity of songs based on Spotify's Web API</b>, participated as a group member, Mar.2021-Apr.2021. [<a href="pub/Spotify Data Analytics.pdf">pdf</a>][<a href="code/Spotify Data Analytics.ipynb">code</a>]</p></li>
 <ul>
 <li><p>Used a Spotify dataset to analyze popularity scores of tracks based on audio features</p>
 </li>
