--- a/index.html
+++ b/index.html
@@ -96,8 +96,7 @@ My dream positions include <b>Data Analyst</b> and <b>Researcher</b> in a think 
 <p><a href="https://publons.com/researcher/3034188/xiuze-zhou/">More details in Publons</a></p>
 <h2>Course Projects</h2>
 <ol>
-<li><p>Data Mining: <b>Predicting popularity of songs based on Spotify's Web API</b>, participated as a group member, Mar.2021-Apr.2021. [<a href="pub/Spotify Data Analytics.pdf">pdf</a>][<a href="https://github.com/wshen01/wshen01.github.io/blob/main/code/Spotify Data Analytics.ipynb
-">code</a>]</p></li>
+<li><p>Data Mining: <b>Predicting popularity of songs based on Spotify's Web API</b>, participated as a group member, Mar.2021-Apr.2021. [<a href="pub/Spotify Data Analytics.pdf">pdf</a>][<a href="https://github.com/wshen01/wshen01.github.io/blob/main/code/Spotify Data Analytics.ipynb">code</a>]</p></li>
 <ul>
 <li><p>Used a Spotify dataset to analyze popularity scores of tracks based on audio features</p>
 </li>
@@ -106,7 +105,7 @@ My dream positions include <b>Data Analyst</b> and <b>Researcher</b> in a think 
 <li><p>Performed regression analysis on popularity and predicted genre</p>
 </li>
 </ul>
-<li><p>Simulation and Modeling: <b>Design and Evaluation of a New Workflow for Customer Money-laundering Risk Ranking</b>, conducted independently, Oct.2020-Nov.2020. [<a href="pub/Money-Laundering.pdf">pdf</a>][<a href="code/Arena code1.exp">code1</a>],[<a href="code/Arena code2.exp">code2</a>]</p></li>
+<li><p>Simulation and Modeling: <b>Design and Evaluation of a New Workflow for Customer Money-laundering Risk Ranking</b>, conducted independently, Oct.2020-Nov.2020. [<a href="pub/Money-Laundering.pdf">pdf</a>][<a href="http://wshen01.github.io/code/Arena code1.exp">code1</a>],[<a href="http://wshen01.github.io/code/Arena code2.exp">code2</a>]</p></li>
 <ul>
 <li><p>Obtained the best fit of the service times and inter-arrival times: Weibull distribution</p>
 </li>
